# kirigami_soundbalance

./: CMakeLists.txt  README.md  design_and_coding_notes.md
src/: CMakeLists.txt  backend.cpp  backend.h  main.cpp  resources.qrc
src/contents/ui/: main.qml
testsources/: test_setup.sh
